--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,17 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
-    "angular-route": "1.2.6"
+    "angular-route": "1.2.6",
+    "angularfire": "~0.6.0",
+    "peerjs": "~0.3.7",
+    "angular-bootstrap": "~0.10.0",
+    "bootflat": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
+  },
+  "resolutions": {
+    "angular": "1.2.6"
   }
 }
