--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-  "name": "staticshowdown",
+  "name": "ss14-team72",
   "version": "0.0.0",
+  "private": true,
   "dependencies": {
     "angular": "1.2.6",
     "json3": "~3.2.6",
