--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angularfire": "~0.6.0",
     "peerjs": "~0.3.7",
     "angular-bootstrap": "~0.10.0",
-    "bootflat": "*"
+    "bootflat": "*",
+    "font-awesome": "~4.0.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
