--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "peerjs": "~0.3.7",
     "angular-bootstrap": "~0.10.0",
     "bootflat": "*",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "angular-audio-playlist": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
