--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-bootstrap": "~0.10.0",
     "bootflat": "*",
     "angular-audio-playlist": "~0.2.1",
-    "animate.css": "*"
+    "animate.css": "*",
+    "ngprogress": "~1.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
